
Important changes in 2.20 (2023-02-XX):

* Issue #76: Added Windows support, see Building For Windows for information
  if you wish to build a Windows version. Currently no pre-compiled binaries
  are available.
* A "make export" option has been added, which gathers all necessary binaries
  to run FFmpegfs without needing to install Cygwin. They can be found in the
  export directory.
* TODO: Create Windows installer.
- TODO: Automatically build Windows release binaries and add to release assets.

Important changes in 2.14 (2023-02-XX):

* Bugfix: Closes [#141](https://github.com/nschlia/ffmpegfs/issues/141):
  Improved memory management by allocating several times the average size of
  allocations far. This prevents obtaining tiny portions over and over again.
  Additionally, after the file is opened, grabbing the entire expected memory
  block rather than doing a tiny allocation initially, followed by a larger
  allocation.
* Bugfix: Avoid race condition causing the inter-process semaphore creation
  to fail for second process.
* Bugfix: Issue #119: If a seek request is still open after EOF, restart
  transcoding.
* Bugfix: Issue #119: To prevent frame/segment creation errors, the frame
  set and HLS code has been updated.
* Bugfix: Avoid crash during shutdown if cache object had already been closed.
* Bugfix: Issue #119: The AVSEEK_FLAG_FRAME set should be used to seek to
  frames when building frame sets. Otherwise, output images may vary if
  searched for or continuously decoded.
* Bugfix: PTS to frame number and vice versa conversion for frame sets was
  incorrect if TBR did not equal frames per second.
* Bugfix: Fix seek requests that are being ignored with frame sets.
* Enhancement: Record milliseconds for every log event.
* Enhancement: make check: Added file size check to frame set tests.
* Optimisation: When reopening after invalidating the cache, the size
  remained at 0. The original size now is once more reserved in order to
  prevent reallocations.